--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -5,7 +5,8 @@
   right: 0;
   top: 0;
   bottom: 0;
-  display: flex; }
+  display: flex;
+  z-index: 10; }
   @media screen and (min-width: 650px) {
     .Modal {
       padding: 2rem; } }
