--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -6,13 +6,19 @@
   top: 0;
   bottom: 0;
   display: flex;
-  z-index: 10; }
+  z-index: 10;
+  animation: fadeBg 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards; }
   @media screen and (min-width: 650px) {
     .Modal {
       padding: 2rem; } }
   .Modal-inner {
     position: relative;
-    margin: auto; }
+    margin: auto;
+    animation: modalPop 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards; }
+    @media screen and (min-width: 650px) {
+      .Modal-inner {
+        max-height: 80vh;
+        max-width: 80vw; } }
   .Modal-close {
     position: fixed;
     top: 0;
@@ -24,10 +30,6 @@
     .Modal-close:hover {
       background-color: rgba(255, 255, 255, 0.7);
       color: black; }
-  @media screen and (min-width: 650px) {
-    .Modal--image .Modal-inner {
-      max-height: 90%;
-      max-width: 90%; } }
   .Modal--image .Modal-inner-description {
     position: absolute;
     bottom: 0;
@@ -44,3 +46,15 @@
     max-width: 768px;
     border-radius: 1rem;
     padding: 1rem; }
+
+@keyframes fadeBg {
+  0% {
+    background: 0; }
+  100% {
+    background: rgba(0, 0, 0, 0.8); } }
+
+@keyframes modalPop {
+  0% {
+    transform: scale(0); }
+  100% {
+    transform: scale(1); } }
