--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -12,12 +12,18 @@
   bottom: 0;
   display: flex;
   z-index: 10; // Above everything, including Back to Top
+  animation: fadeBg .3s cubic-bezier(.165, .84, .44, 1) forwards;
   @media screen and (min-width: $bp--1000) {
     padding: $spacing--2000;
   }
   &-inner {
     position: relative;
     margin: auto;
+    animation: modalPop .3s cubic-bezier(.165, .84, .44, 1) forwards;
+    @media screen and (min-width: $bp--1000) {
+      max-height: 80vh;
+      max-width: 80vw;
+    }
   }
   &-close {
     position: fixed;
@@ -37,10 +43,6 @@
   &--image {
     .Modal {
       &-inner {
-        @media screen and (min-width: $bp--1000) {
-          max-height: 90%;
-          max-width: 90%;
-        }
         &-description {
           position: absolute;
           bottom: 0;
@@ -67,5 +69,23 @@
         padding: $spacing--1000;
       }
     }
+  }
+}
+
+@keyframes fadeBg {
+  0% {
+    background: 0;
+  }
+  100% {
+    background: rgba(0, 0, 0, .8);
+  }
+}
+
+@keyframes modalPop {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
   }
 }
